--- a/RSSParser_Sample/Podfile
+++ b/RSSParser_Sample/Podfile
@@ -1,5 +1,5 @@
 platform :ios, '7.0'
-pod 'AFNetworking', '~> 2.0.3'
+pod 'AFNetworking', '~> 3.0.0-beta'
 
 target :Tests, :exclusive => true do
    pod 'Kiwi/XCTest'
